apps/tomcat4/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat4-stable
  namespace: staging
  labels:
    app: tomcat4
spec:
  selector:
    app: tomcat4
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jmx
      port: 9404
      targetPort: 9404
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat4-canary
  namespace: staging
  labels:
    app: tomcat4
spec:
  selector:
    app: tomcat4
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jmx
      port: 9404
      targetPort: 9404
