apps/tomcat4/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat4
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
    - host: tomcat4.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat4-stable
                port:
                  number: 8080
